# mx-sdk-rs

./: Cargo.toml  run-scenarios-go.sh  vm-test-build-copy.sh
contracts/drwa/asset-manager/: Cargo.toml
contracts/drwa/asset-manager/meta/: Cargo.toml
contracts/drwa/asset-manager/meta/src/: main.rs
contracts/drwa/asset-manager/scenarios/: asset-manager-denial-signals.scen.json  asset-manager-init.scen.json
contracts/drwa/asset-manager/src/: drwa_asset_manager_proxy.rs  lib.rs
contracts/drwa/asset-manager/tests/: asset_manager_blackbox_test.rs  asset_manager_gas_bench_test.rs  asset_manager_integration_rs_test.rs  asset_manager_scenario_go_test.rs  asset_manager_scenario_rs_test.rs  asset_manager_upgrade_test.rs  asset_manager_whitebox_test.rs
contracts/drwa/asset-manager/wasm/: Cargo.toml
contracts/drwa/asset-manager/wasm/src/: lib.rs
contracts/drwa/attestation/: Cargo.toml
contracts/drwa/attestation/meta/: Cargo.toml
contracts/drwa/common/: Cargo.toml
contracts/drwa/common/src/: lib.rs
contracts/drwa/common/test-harness/: Cargo.toml
contracts/drwa/common/test-harness/meta/: Cargo.toml
contracts/drwa/common/test-harness/meta/src/: main.rs
contracts/drwa/common/test-harness/src/: lib.rs
contracts/drwa/common/test-harness/tests/: common_sync_gas_bench_test.rs  common_validation_test.rs
contracts/drwa/common/test-harness/wasm/: Cargo.toml
contracts/drwa/common/test-harness/wasm/src/: lib.rs
contracts/drwa/common/tests/: Cargo.toml  drwa_lifecycle_integration_test.rs  drwa_sync_envelope_codec_test.rs  lib.rs
contracts/drwa/drwa-auth-admin/: Cargo.toml
contracts/drwa/drwa-auth-admin/meta/: Cargo.toml
contracts/drwa/drwa-auth-admin/meta/src/: main.rs
contracts/drwa/drwa-auth-admin/scenarios/: drwa-auth-admin-add-remove-signer.scen.json  drwa-auth-admin-change-quorum.scen.json  drwa-auth-admin-denial-signals.scen.json  drwa-auth-admin-init.scen.json  drwa-auth-admin-replay-protection.scen.json
contracts/drwa/drwa-auth-admin/src/: lib.rs
contracts/drwa/drwa-auth-admin/tests/: drwa_auth_admin_property_test.rs  drwa_auth_admin_scenario_rs_test.rs  drwa_auth_admin_whitebox_test.rs
contracts/drwa/drwa-auth-admin/wasm/: Cargo.toml
contracts/drwa/drwa-auth-admin/wasm/src/: lib.rs
contracts/drwa/identity-registry/: Cargo.toml
contracts/drwa/interactor/: Cargo.toml  config.toml  docker-compose.yml  state.toml
contracts/drwa/interactor/src/: drwa_interactor.rs  drwa_interactor_config.rs  drwa_interactor_state.rs
contracts/drwa/interactor/tests/: chain_simulator_drwa_test.rs
contracts/drwa/policy-registry/: Cargo.toml
contracts/feature-tests/abi-tester/: Cargo.toml  abi_tester_expected_esdt_attr.esdt-abi.json  abi_tester_expected_main.abi.json  abi_tester_expected_view.abi.json
contracts/modules/src/: only_admin.rs
contracts/mrv/aggregator/: Cargo.toml
contracts/mrv/atomic-swap/: Cargo.toml
contracts/mrv/buffer-pool/: Cargo.toml
contracts/mrv/carbon-credit/: Cargo.toml
contracts/mrv/come-settlement/: Cargo.toml
contracts/mrv/come-settlement/meta/: Cargo.toml
contracts/mrv/come-settlement/meta/src/: main.rs
contracts/mrv/come-settlement/scenarios/: come-settlement-init.scen.json
contracts/mrv/come-settlement/src/: lib.rs
contracts/mrv/come-settlement/tests/: come_settlement_scenario_go_test.rs  come_settlement_scenario_rs_test.rs  come_settlement_whitebox_test.rs
contracts/mrv/come-settlement/wasm/: Cargo.toml
contracts/mrv/come-settlement/wasm/src/: lib.rs
contracts/mrv/common/: Cargo.toml
contracts/mrv/common/src/: lib.rs
contracts/mrv/common/tests/: mrv_lifecycle_integration_test.rs
contracts/mrv/governance/: Cargo.toml
contracts/mrv/governance-multisig/: Cargo.toml
contracts/mrv/gsoc-registry/: Cargo.toml
contracts/mrv/income-distribution/: Cargo.toml
contracts/mrv/registry/: Cargo.toml
contracts/mrv/reserve-proof-registry/: Cargo.toml
contracts/mrv/reserve-proof-registry/meta/: Cargo.toml
contracts/mrv/reserve-proof-registry/meta/src/: main.rs
contracts/mrv/reserve-proof-registry/scenarios/: reserve-proof-integration.scen.json  reserve-proof-lifecycle.scen.json
contracts/mrv/reserve-proof-registry/src/: buffer_pool_proxy.rs  carbon_credit_proxy.rs  lib.rs  reserve_proof_registry_proxy.rs
contracts/mrv/reserve-proof-registry/tests/: reserve_proof_integration_rs_test.rs  reserve_proof_registry_scenario_go_test.rs  reserve_proof_scenario_go_test.rs  reserve_proof_scenario_rs_test.rs  reserve_proof_whitebox_test.rs
contracts/mrv/reserve-proof-registry/wasm/: Cargo.toml
contracts/mrv/reserve-proof-registry/wasm/src/: lib.rs
framework/meta/tests/: install_debugger_test.rs
(+179 files in other folders)
