[package]
name = "drwa-auth-admin"
version = "0.0.0"
edition = "2024"
publish = false
authors = ["Dharitri <dev@dharitri.org>"]

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.65.0"
path = "../../../framework/base"

[dependencies.drwa-common]
path = "../common"

[dev-dependencies.multiversx-sc-scenario]
version = "0.65.0"
features = ["wasmer-experimental"]
path = "../../../framework/scenario"
