[package]
name = "mrv-come-settlement"
version = "0.0.0"
edition = "2024"
publish = false
authors = ["Dharitri <dev@dharitri.org>"]

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.65.1"
path = "../../../framework/base"

[dependencies.mrv-common]
path = "../common"

[dev-dependencies.multiversx-sc-scenario]
version = "0.65.1"
features = ["wasmer-experimental"]
path = "../../../framework/scenario"

[dev-dependencies.mrv-governance]
path = "../governance"
