[package]
name = "mrv-reserve-proof-registry"
version = "0.0.0"
edition = "2024"
publish = false
authors = ["Dharitri <dev@dharitri.org>"]

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.65.1"
path = "../../../framework/base"

[dependencies.mrv-common]
path = "../common"

[dependencies.mrv-carbon-credit]
path = "../carbon-credit"

[dependencies.mrv-buffer-pool]
path = "../buffer-pool"

[dev-dependencies.multiversx-sc-scenario]
version = "0.65.1"
features = ["wasmer-experimental"]
path = "../../../framework/scenario"

[dev-dependencies.mrv-governance]
path = "../governance"
